<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="@drawable/background">
  
   	<ImageButton android:id="@+id/btn_menu"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
       	android:layout_marginTop="20dp"
       	android:layout_marginLeft="15dp"
       	android:text="@string/menu"
       	android:src="@drawable/menu_btn"
       	android:background="@null"
       	android:contentDescription="@string/menu"
       	android:onClick="showPopup" />
  	<RadioGroup android:id="@+id/radio_group_goal"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal"
		android:textSize="16sp"
		android:visibility="invisible" >
       	<RadioButton android:id="@+id/radio_button_goal1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal1"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
	 		android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/radio_button_goal2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal2"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
  			android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
		<RadioButton android:id="@+id/radio_button_goal3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal3"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
	 		android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
   	</RadioGroup>    
    
   	<TextView android:id="@+id/text_view_length"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"		
		android:textColor="@color/black"
		android:layout_below="@id/btn_menu"
		android:layout_marginRight="15dp"		
		android:layout_marginTop="10dp"
		android:text="@string/length"
		android:textSize="16sp" />
   	<NumberPicker android:id="@+id/number_picker_length"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_length"
        android:layout_alignRight="@id/radio_group_goal"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:textSize="16sp" />	  				
   	<TextView android:id="@+id/text_view_workout_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/black"
		android:layout_alignBaseline="@id/text_view_length"
		android:layout_marginLeft="30dp"
		android:text="@string/workout_time"
		android:textSize="16sp" />
   	<NumberPicker android:id="@+id/number_picker_workout_time"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/number_picker_length"
		android:layout_alignLeft="@id/radio_group_goal"
        android:textSize="16sp" />	
	<TextView android:id="@+id/text_view_reminder"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_marginRight="15dp"
		android:layout_below="@id/number_picker_workout_time"
		android:text="@string/reminder"
		android:textSize="16sp" />
	<Spinner android:id="@+id/spinner_reminder"
	    android:layout_width="0dp"
	    android:layout_height="35dp"
	    android:layout_below="@id/text_view_reminder"
	    android:layout_alignLeft="@id/radio_group_goal"
	    android:layout_alignRight="@id/radio_group_goal"	  	
	    android:layout_marginTop="10dp"
	    android:layout_centerHorizontal="true"
	    android:textSize="16sp" />
	<TextView android:id="@+id/text_view_schedule"
        android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/spinner_reminder"
  		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
  		android:text="@string/schedule"
  		android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_sunday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_view_schedule"	    
		android:layout_marginRight="15dp"
		android:layout_marginTop="10dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/sunday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_wednesday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@id/checkbox_sunday"
	    android:layout_below="@id/checkbox_sunday"
	    android:layout_alignParentRight="true"
   		android:layout_marginRight="15dp"
		android:layout_marginTop="10dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/wednesday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_friday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/checkbox_tuesday"
	    android:layout_below="@id/checkbox_tuesday"
	    android:layout_alignBaseline="@id/checkbox_wednesday"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/friday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_saturday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/checkbox_wednesday"
	    android:layout_alignRight="@id/checkbox_wednesday"
	    android:layout_marginTop="10dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/saturday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<ImageButton android:id="@+id/image_button_create"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="130dp"
	    android:layout_marginLeft="20dp"
	    android:layout_alignParentLeft="true"
	    android:src="@drawable/create_btn"
	    android:background="@null"
	    android:contentDescription="@string/next" />
	<CheckBox android:id="@+id/checkbox_monday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@id/checkbox_sunday"
	    android:layout_alignBottom="@id/checkbox_sunday"
	    android:layout_toLeftOf="@id/checkbox_sunday"
	    android:layout_marginRight="25dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/monday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_thursday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/checkbox_monday"
	    android:layout_alignRight="@id/checkbox_monday"
	    android:layout_alignBaseline="@id/checkbox_wednesday"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/thursday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_tuesday"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/checkbox_wednesday"
	    android:layout_marginRight="30dp"
	    android:layout_toLeftOf="@id/checkbox_monday"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/tuesday"
	    android:textColor="@color/black"
	    android:textSize="16sp" />

</RelativeLayout>