<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="@drawable/background">
  
	<ImageButton android:id="@+id/btn_menu"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_alignParentTop="true"
       	android:layout_marginTop="20dp"
       	android:layout_marginLeft="15dp"
       	android:text="@string/menu"
       	android:src="@drawable/menu_btn"
       	android:background="@null"
       	android:contentDescription="@string/menu"
       	android:onClick="showPopup" />  				
	<TextView android:id="@+id/text_view_goal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_below="@id/btn_menu"
		android:layout_marginRight="15dp"
		android:text="@string/goal"
		android:textSize="16sp" />
  	<RadioGroup android:id="@+id/radio_group_goal"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:layout_below="@id/text_view_goal"
		android:orientation="horizontal"
		android:textSize="16sp" >
       	<RadioButton android:id="@+id/radio_button_goal1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal1"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
	 		android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/radio_button_goal2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal2"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
  			android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
		<RadioButton android:id="@+id/radio_button_goal3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/goal3"
	        android:textColor="@color/black"
	        android:textSize="16sp"
	        android:button="@null"
	 		android:drawableRight="@android:drawable/btn_radio"
	        android:onClick="onRadioButtonClicked"/>
   	</RadioGroup>
   	<TextView android:id="@+id/text_view_level"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/radio_group_goal"
		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
		android:text="@string/level"
		android:textSize="16sp" />
	<Spinner android:id="@+id/spinner_level"
	   	android:layout_width="0dp"
	   	android:layout_height="35dp"
	   	android:layout_below="@+id/text_view_level"
	    android:layout_alignLeft="@id/radio_group_goal"
	    android:layout_alignRight="@id/radio_group_goal"	   	
	    android:layout_marginTop="10dp"
	    android:layout_centerHorizontal="true"
	    android:entries="@array/array_level" 
	    android:textSize="16sp" />
	<TextView android:id="@+id/text_view_muscle_focus"
		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@+id/spinner_level"
  		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
  		android:text="@string/muscle_focus"
  		android:textSize="16sp" />
	<Spinner android:id="@+id/spinner_muscle_focus"
	    android:layout_width="0dp"
	    android:layout_height="35dp"
	    android:layout_below="@+id/text_view_muscle_focus"
	    android:layout_alignLeft="@id/radio_group_goal"
	    android:layout_alignRight="@id/radio_group_goal"
	    android:layout_marginTop="10dp"
	    android:layout_centerHorizontal="true"
	    android:textSize="16sp" />
	<TextView android:id="@+id/text_view_phases"
        android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textColor="@color/black"
		android:layout_alignParentRight="true"
		android:layout_below="@id/spinner_muscle_focus"
		android:layout_marginRight="15dp"
		android:layout_marginTop="15dp"
  		android:text="@string/phases"
  		android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_phases1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@id/text_view_phases"
		android:layout_marginRight="15dp"
		android:layout_marginTop="10dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/phases1"
	    android:textColor="@color/black" 
	    android:textSize="16sp" />
	<CheckBox android:id="@+id/checkbox_phases2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/checkbox_phases1"
		android:layout_marginRight="15dp"
		android:layout_marginTop="10dp"
	    android:button="@null"
	    android:drawableRight="@drawable/checkbox_selector"
	    android:onClick="onCheckboxClicked"
	    android:text="@string/phases2"
	    android:textColor="@color/black" 
	    android:textSize="16sp" />
	<ImageButton android:id="@+id/image_button_next"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="130dp"
	    android:layout_marginLeft="20dp"
	    android:layout_alignParentLeft="true"
	    android:src="@drawable/next_btn"
	    android:background="@null"
	    android:contentDescription="@string/next" />
</RelativeLayout>